--- a/residence-secondaire-mediterranee.html
+++ b/residence-secondaire-mediterranee.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Résidence Secondaire Littoral Méditerranéen | FG Strategies">
     <meta property="og:description" content="Acheter une résidence secondaire sur le littoral méditerranéen sans transformer un plaisir en contrainte.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://immobilier-neuf-selection.netlify.app/residence-secondaire-mediterranee">
+    <meta property="og:url" content="https://excellence.fg-strategies.fr/residence-secondaire-mediterranee">
     
     <!-- SEO -->
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel="canonical" href="https://immobilier-neuf-selection.netlify.app/residence-secondaire-mediterranee">
+    <link rel="canonical" href="https://excellence.fg-strategies.fr/residence-secondaire-mediterranee">
     
     <!-- Structured Data - BreadcrumbList -->
     <script type="application/ld+json">
@@ -26,17 +26,17 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Accueil",
-        "item": "https://immobilier-neuf-selection.netlify.app"
+        "item": "https://excellence.fg-strategies.fr"
       },{
         "@type": "ListItem",
         "position": 2,
         "name": "Immobilier Neuf Occitanie",
-        "item": "https://immobilier-neuf-selection.netlify.app/"
+        "item": "https://excellence.fg-strategies.fr/"
       },{
         "@type": "ListItem",
         "position": 3,
         "name": "Résidence Secondaire Méditerranée",
-        "item": "https://immobilier-neuf-selection.netlify.app/residence-secondaire-mediterranee"
+        "item": "https://excellence.fg-strategies.fr/residence-secondaire-mediterranee"
       }]
     }
     </script>
