--- a/famille-qualite-vie.html
+++ b/famille-qualite-vie.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Appartement Familial Neuf en Occitanie | FG STRATEGIES">
     <meta property="og:description" content="Méthode de sélection chirurgicale pour acheter un appartement neuf familial en Occitanie sans erreur.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://immobilier-neuf-selection.netlify.app/famille-qualite-vie">
+    <meta property="og:url" content="https://excellence.fg-strategies.fr/famille-qualite-vie">
     
     <!-- SEO -->
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel="canonical" href="https://immobilier-neuf-selection.netlify.app/famille-qualite-vie">
+    <link rel="canonical" href="https://excellence.fg-strategies.fr/famille-qualite-vie">
     
     <!-- Structured Data - BreadcrumbList -->
     <script type="application/ld+json">
@@ -26,17 +26,17 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Accueil",
-        "item": "https://immobilier-neuf-selection.netlify.app"
+        "item": "https://excellence.fg-strategies.fr"
       },{
         "@type": "ListItem",
         "position": 2,
         "name": "Immobilier Neuf Occitanie",
-        "item": "https://immobilier-neuf-selection.netlify.app/"
+        "item": "https://excellence.fg-strategies.fr/"
       },{
         "@type": "ListItem",
         "position": 3,
         "name": "Famille - Qualité de Vie",
-        "item": "https://immobilier-neuf-selection.netlify.app/famille-qualite-vie"
+        "item": "https://excellence.fg-strategies.fr/famille-qualite-vie"
       }]
     }
     </script>
