--- a/landing-neuf-excellence.html
+++ b/landing-neuf-excellence.html
@@ -14,8 +14,8 @@
     <meta property="og:title" content="Sélection Privée Immobilier Neuf d'Excellence Occitanie">
     <meta property="og:description" content="Accompagnement exclusif pour acquéreurs engagés. Programmes neufs rigoureusement sélectionnés.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://immobilier-neuf-selection.netlify.app/landing-neuf-excellence">
-    <meta property="og:image" content="https://immobilier-neuf-selection.netlify.app/images/og-image-immobilier-neuf.jpg">
+    <meta property="og:url" content="https://excellence.fg-strategies.fr/landing-neuf-excellence.html">
+    <meta property="og:image" content="https://excellence.fg-strategies.fr/images/og-image-immobilier-neuf.jpg">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar" id="navbar" style="background: var(--bleu-nuit);">
+    <nav class="navbar scrolled" id="navbar" style="background: var(--bleu-nuit);">
         <div class="container nav-container">
             <div class="nav-brand">
                 <a href="index.html" style="color: inherit; text-decoration: none;">Immobilier Neuf d'Excellence</a>
@@ -103,77 +103,21 @@
                         </p>
                     </div>
 
-                    <!-- Netlify Forms -->
-                    <form class="fg-form" id="fgLeadForm" name="lead-google-ads" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/merci.html">
-                        <!-- Honeypot anti-spam -->
-                        <input type="hidden" name="bot-field" />
-                        <input type="hidden" name="form-name" value="lead-google-ads" />
-
-                        <label class="fg-label">
-                            Prénom *
-                            <input class="fg-input" type="text" name="prenom" autocomplete="given-name" required />
-                        </label>
-
-                        <label class="fg-label">
-                            Email *
-                            <input class="fg-input" type="email" name="email" autocomplete="email" required />
-                        </label>
-
-                        <label class="fg-label">
-                            Téléphone *
-                            <input class="fg-input" type="tel" name="telephone" autocomplete="tel" required />
-                        </label>
-
-                        <label class="fg-label">
-                            Zone recherchée *
-                            <input class="fg-input" type="text" name="zone" placeholder="Montpellier, Nîmes, littoral…" required />
-                        </label>
-
-                        <label class="fg-label">
-                            Type de projet *
-                            <select class="fg-select" name="projet" required>
-                                <option value="" selected disabled>Choisir…</option>
-                                <option value="residence-principale">Résidence principale</option>
-                                <option value="residence-secondaire">Résidence secondaire</option>
-                                <option value="investissement-patrimonial">Investissement patrimonial</option>
-                            </select>
-                        </label>
-
-                        <!-- Champs cachés UTM (tracking) -->
-                        <input type="hidden" name="utm_source" id="utm_source" />
-                        <input type="hidden" name="utm_campaign" id="utm_campaign" />
-                        <input type="hidden" name="utm_adgroup" id="utm_adgroup" />
-                        <input type="hidden" name="utm_term" id="utm_term" />
-                        <input type="hidden" name="utm_content" id="utm_content" />
-                        <input type="hidden" name="page" value="landing-neuf-excellence" />
-
-                        <button class="fg-btn fg-btn--primary fg-btn--full" type="submit">
-                            Je souhaite être contacté
-                        </button>
-
-                        <p class="fg-form__microcopy">
-                            Réponse sous 24h • Sollicitation maîtrisée • Confidentialité garantie
+                    <!-- Formulaire Microsoft Forms -->
+                    <div style="width: 100%; max-width: 100%;">
+                        <iframe 
+                            src="https://forms.office.com/Pages/ResponsePage.aspx?id=LGTilXow2Em0gRtwpmt_WCzkzs9nK6hMhdh3jFYqgf5UNjI0N0FBMDNMMUlIVk5JNkc2RExWVTJKUy4u" 
+                            width="100%" 
+                            height="700" 
+                            frameborder="0" 
+                            marginheight="0" 
+                            marginwidth="0"
+                            style="border: none; border-radius: 8px;">
+                            Chargement du formulaire…
+                        </iframe>
+                        <p class="fg-form__microcopy" style="margin-top: 1rem; text-align: center;">
+                            Réponse sous 24h • Sollicitation maîtrisée<br> • Confidentialité garantie
                         </p>
-                    </form>
-
-                    <!-- Message de succès -->
-                    <div class="fg-form__success" id="fgSuccess" style="display: none;">
-                        <i class="fas fa-check-circle" style="font-size: 3rem; color: var(--vert-sauge); margin-bottom: 1rem;"></i>
-                        <h3 style="color: var(--bleu-nuit); margin-bottom: 1rem;">Demande bien reçue ✓</h3>
-                        <p style="color: var(--gris-pierre);">
-                            Merci. Un expert vous contactera dans les 24h pour échanger sur votre projet.
-                        </p>
-                    </div>
-
-                    <!-- Message d'erreur -->
-                    <div class="fg-form__error" id="fgError" style="display: none;">
-                        <i class="fas fa-exclamation-triangle" style="font-size: 3rem; color: #d9534f; margin-bottom: 1rem;"></i>
-                        <p style="color: var(--gris-pierre); margin-bottom: 1rem;">
-                            Une erreur s'est produite. Merci de réessayer ou de nous contacter.
-                        </p>
-                        <a href="https://outlook.office.com/book/FGSTRATEGIESACH@fg-strategies.com/" target="_blank" class="fg-btn fg-btn--primary">
-                            Prendre rendez-vous
-                        </a>
                     </div>
                 </div>
 
