--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -103,7 +103,7 @@
             Cabinet de conseil en stratégie patrimoniale et immobilière<br>
             <strong>Siège social :</strong> Montpellier, Occitanie<br>
             <strong>Contact :</strong> <a href="mailto:contact@fg-strategies.com">contact@fg-strategies.com</a><br>
-            <strong>Site web :</strong> <a href="https://immobilier-neuf-selection.netlify.app" target="_blank" rel="noopener">immobilier-neuf-selection.netlify.app</a>
+            <strong>Site web :</strong> <a href="https://excellence.fg-strategies.fr" target="_blank" rel="noopener">excellence.fg-strategies.fr</a>
         </p>
 
         <h2>2. Directeur de la Publication</h2>
@@ -213,7 +213,7 @@
             <strong>FG STRATEGIES</strong><br>
             <strong>E-mail :</strong> <a href="mailto:contact@fg-strategies.com">contact@fg-strategies.com</a><br>
             <strong>Téléphone :</strong> Disponible sur demande<br>
-            <strong>Site web :</strong> <a href="https://immobilier-neuf-selection.netlify.app" target="_blank" rel="noopener">immobilier-neuf-selection.netlify.app</a><br>
+            <strong>Site web :</strong> <a href="https://excellence.fg-strategies.fr" target="_blank" rel="noopener">excellence.fg-strategies.fr</a><br>
             <strong>Prise de rendez-vous :</strong> <a href="https://outlook.office.com/book/FGSTRATEGIESACH@fg-strategies.com/" target="_blank" rel="noopener">Réserver un échange</a>
         </p>
 
