--- a/landing-neuf-excellence.html
+++ b/landing-neuf-excellence.html
@@ -113,7 +113,7 @@
                     </div>
 
                     <!-- Formulaire Premium Personnalisé -->
-                    <form id="premiumLeadForm" class="premium-form" onsubmit="submitPremiumLead(event)">
+                    <form id="premiumLeadForm" class="premium-form">
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="prenom">Prénom *</label>
