--- a/famille-qualite-vie.html
+++ b/famille-qualite-vie.html
@@ -212,7 +212,7 @@
                         <li>✔ Critères invisibles mais décisifs</li>
                         <li>✔ Aide à éliminer les fausses bonnes options</li>
                     </ul>
-                    <a href="#form-grille-decision"
+                    <a href="mailto:contact@fg-strategies.com?subject=Demande%20de%20la%20grille%20de%20d%C3%A9cision%20%22Famille%20qualit%C3%A9%20de%20vie%22&body=Bonjour%20l'%C3%A9quipe%20FG%20STRATEGIES,%0D%0A%0D%0AJe%20me%20permets%20de%20vous%20contacter%20car%20je%20suis%20int%C3%A9ress%C3%A9(e)%20par%20la%20grille%20de%20d%C3%A9cision%20%22Famille%20qualit%C3%A9%20de%20vie%22.%0D%0A%0D%0ANous%20sommes%20en%20r%C3%A9flexion%20sur%20un%20projet%20immobilier%20pour%20notre%20famille%20et%20nous%20aimerions%20avoir%20une%20m%C3%A9thode%20claire%20pour%20faire%20les%20bons%20choix.%0D%0A%0D%0AVoici%20mes%20coordonn%C3%A9es%20:%0D%0A%E2%80%A2%20Pr%C3%A9nom%20:%20%0D%0A%E2%80%A2%20Nom%20:%20%0D%0A%E2%80%A2%20Email%20:%20%0D%0A%E2%80%A2%20T%C3%A9l%C3%A9phone%20:%20%0D%0A%0D%0AMerci%20d'avance%20pour%20votre%20retour%20!%0D%0A%0D%0ABien%20cordialement,"
                        class="btn-secondary">
                         Oui, j'accède à la grille de décision
                     </a>
