--- a/residence-secondaire-mediterranee.html
+++ b/residence-secondaire-mediterranee.html
@@ -98,7 +98,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar" aria-label="Navigation principale">
         <div class="container">
-            <a href="immobilier-neuf-occitanie" class="nav-brand">Immobilier Neuf d'Excellence — FG STRATEGIES</a>
+            <a href="index.html" class="nav-brand">Immobilier Neuf d'Excellence — FG STRATEGIES</a>
             <ul class="nav-menu">
                 <li><a href="#methode">Notre méthode</a></li>
                 <li><a href="#destinations">Destinations & choix</a></li>
@@ -207,7 +207,7 @@
                         <li><i class="fas fa-check" style="color: var(--vert-sauge); margin-right: 0.5rem;"></i>Usage réel, gestion, accessibilité, long terme</li>
                         <li><i class="fas fa-check" style="color: var(--vert-sauge); margin-right: 0.5rem;"></i>Aide à éviter les erreurs fréquentes du littoral</li>
                     </ul>
-                    <a href="#form-grille-littoral"
+                    <a href="mailto:contact@fg-strategies.com?subject=Demande%20de%20la%20grille%20de%20d%C3%A9cision%20%22R%C3%A9sidence%20littorale%22&body=Bonjour%20l'%C3%A9quipe%20FG%20STRATEGIES,%0D%0A%0D%0AJe%20me%20permets%20de%20vous%20contacter%20car%20je%20suis%20int%C3%A9ress%C3%A9(e)%20par%20la%20grille%20de%20d%C3%A9cision%20%22R%C3%A9sidence%20littorale%22.%0D%0A%0D%0AJe%20r%C3%A9fl%C3%A9chis%20%C3%A0%20un%20projet%20de%20r%C3%A9sidence%20secondaire%20sur%20le%20littoral%20m%C3%A9diterran%C3%A9en%20et%20j'aimerais%20avoir%20une%20m%C3%A9thode%20claire%20pour%20%C3%A9valuer%20les%20options.%0D%0A%0D%0AVoici%20mes%20coordonn%C3%A9es%20:%0D%0A%E2%80%A2%20Pr%C3%A9nom%20:%20%0D%0A%E2%80%A2%20Nom%20:%20%0D%0A%E2%80%A2%20Email%20:%20%0D%0A%E2%80%A2%20T%C3%A9l%C3%A9phone%20:%20%0D%0A%0D%0AMerci%20d'avance%20pour%20votre%20retour%20!%0D%0A%0D%0ABien%20cordialement,"
                        class="btn-secondary">
                         Recevoir la grille de décision
                     </a>
@@ -326,7 +326,7 @@
             <!-- Destination 1 : Sète -->
             <div class="quartier-card" style="margin-bottom: 4rem;">
                 <div class="quartier-image">
-                    <img src="https://www.genspark.ai/api/files/s/IAKQ3uWC" 
+                    <img src="https://images.unsplash.com/photo-1622015663319-e97e697503ee?w=800&h=600&fit=crop&q=85" 
                          alt="Sète - Port et canaux, la Venise du Languedoc" 
                          loading="lazy">
                 </div>
@@ -519,7 +519,7 @@
             <div class="process-timeline">
                 <div class="process-step">
                     <div class="process-number">1</div>
-                    <h3>Échange de cadrage (15-30 min)</h3>
+                    <h3>Échange de cadrage</h3>
                     <p>Usage réel, critères prioritaires, budget, calendrier. Nous validons ensemble la cohérence du projet.</p>
                 </div>
 
@@ -531,8 +531,8 @@
 
                 <div class="process-step">
                     <div class="process-number">3</div>
-                    <h3>Shortlist de 2-3 options cohérentes</h3>
-                    <p>Nous pré-sélectionnons les biens qui correspondent vraiment à votre usage et votre vision long terme.</p>
+                    <h3>Sélection personnalisée et affinée</h3>
+                    <p>Nous vous proposons une liste finement travaillée de biens qui correspondent réellement à vos critères et à votre vision à long terme. Seules les opportunités pertinentes vous sont présentées.</p>
                 </div>
 
                 <div class="process-step">
