--- a/famille-qualite-vie.html
+++ b/famille-qualite-vie.html
@@ -98,7 +98,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar" aria-label="Navigation principale">
         <div class="container">
-            <a href="immobilier-neuf-occitanie" class="nav-brand">Immobilier Neuf d'Excellence — FG STRATEGIES</a>
+            <a href="index.html" class="nav-brand">Immobilier Neuf d'Excellence — FG STRATEGIES</a>
             <ul class="nav-menu">
                 <li><a href="#methode">Notre méthode</a></li>
                 <li><a href="#quartiers">Quartiers & choix</a></li>
