--- a/landing-neuf-excellence.html
+++ b/landing-neuf-excellence.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>Sélection Privée Immobilier Neuf d'Excellence Occitanie | FG STRATEGIES</title>
-    <meta name="description" content="Accédez à notre sélection confidentielle de biens neufs haut de gamme en Occitanie. Accompagnement exclusif pour acquéreurs engagés. Réponse sous 24h.">
+    <title>Programmes Neufs d'Exception Littoral Méditerranéen >600K€ | FG STRATEGIES</title>
+    <meta name="description" content="Sélection privée programmes neufs d'exception >600K€ Littoral Méditerranéen. Expert indépendant, 0€ d'honoraires. Réponse <24h.">
     <meta name="keywords" content="immobilier neuf excellence, sélection privée, biens haut de gamme Occitanie, accompagnement patrimonial, Montpellier, Nîmes, Sète">
     <meta name="robots" content="noindex, nofollow">
     
@@ -65,41 +65,29 @@
 
                 <!-- Left: Proposition de valeur -->
                 <div class="fg-hero__content">
-                    <div class="fg-hero__kicker">Immobilier neuf d'excellence • Occitanie</div>
+                    <div class="fg-hero__kicker">Expert Indépendant • Littoral Méditerranéen</div>
 
                     <h1 class="fg-hero__title">
-                        Votre sélection privée de biens neufs d'excellence en Occitanie
+                        Programmes Neufs d'Exception<br>Littoral Méditerranéen
                     </h1>
 
-                    <p class="fg-hero__subtitle-seo">
-                        Accédez à une sélection confidentielle de biens neufs haut de gamme
+                    <p class="fg-hero__subtitle-seo" style="font-size: 24px; font-weight: 600; margin: 1.5rem 0;">
+                        Sélection privée >600K€ | Expert indépendant | 0€ d'honoraires
                     </p>
-
-                    <p class="fg-hero__subtitle">
-                        Nous accompagnons des acquéreurs engagés, sur des opportunités finement sélectionnées, 
-                        avec une approche sur mesure, indépendante et patrimoniale.
-                    </p>
-
-                    <ul class="fg-hero__bullets">
-                        <li><i class="fas fa-check-circle"></i> Programmes neufs d'excellence rigoureusement sélectionnés</li>
-                        <li><i class="fas fa-check-circle"></i> Résidence principale, secondaire, investissement patrimonial</li>
-                        <li><i class="fas fa-check-circle"></i> Accompagnement global : sélection, financement, structuration</li>
-                        <li><i class="fas fa-check-circle"></i> Interlocuteur unique, suivi de A à Z</li>
-                    </ul>
 
                     <div class="fg-hero__ctaRow">
                         <a class="fg-btn fg-btn--primary" href="#demande">
-                            Accéder à notre sélection privée
+                            Accéder à la Sélection Privée
                         </a>
                         <a class="fg-btn fg-btn--ghost" href="https://outlook.office.com/book/FGSTRATEGIESACH@fg-strategies.com/" target="_blank">
-                            Échanger avec un expert en immobilier d'excellence
+                            Échanger avec nous
                         </a>
                     </div>
 
-                    <div class="fg-hero__trust">
-                        <span><i class="fas fa-check"></i> Sélection privée</span>
-                        <span><i class="fas fa-check"></i> Expertise reconnue</span>
-                        <span><i class="fas fa-check"></i> Approche patrimoniale</span>
+                    <div class="fg-hero__trust" style="margin-top: 2rem; padding: 1.5rem; background: rgba(255, 255, 255, 0.1); border-radius: 8px;">
+                        <span><i class="fas fa-check"></i> 15 ans d'expertise</span>
+                        <span><i class="fas fa-check"></i> Réponse <24h</span>
+                        <span><i class="fas fa-check"></i> 100% indépendant</span>
                     </div>
                 </div>
 
@@ -161,22 +149,31 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="projet">Votre projet</label>
-                            <textarea 
-                                id="projet" 
-                                name="projet" 
-                                class="premium-input premium-textarea" 
-                                placeholder="Décrivez-nous votre projet d'acquisition immobilière..."
-                                rows="4"></textarea>
+                            <label for="zone">Zone recherchée *</label>
+                            <select 
+                                id="zone" 
+                                name="zone" 
+                                class="premium-input" 
+                                required>
+                                <option value="">Sélectionnez une zone</option>
+                                <option value="Grande-Motte">Grande-Motte</option>
+                                <option value="Sète">Sète</option>
+                                <option value="Agde">Agde</option>
+                                <option value="Montpellier">Montpellier</option>
+                                <option value="Nîmes">Nîmes</option>
+                                <option value="Béziers">Béziers</option>
+                                <option value="Perpignan">Perpignan</option>
+                                <option value="Autre">Autre</option>
+                            </select>
                         </div>
 
                         <button type="submit" class="premium-button" id="submitBtn">
-                            <span class="btn-text">Envoyer ma demande</span>
+                            <span class="btn-text">Recevoir la Sélection Privée</span>
                             <span class="btn-loader" style="display: none;">⏳ Envoi en cours...</span>
                         </button>
 
-                        <p class="fg-form__microcopy" style="margin-top: 1.5rem; text-align: center; font-size: 0.875rem; color: #666;">
-                            Réponse sous 24h • Sollicitation maîtrisée • Confidentialité garantie
+                        <p class="fg-form__microcopy" style="margin-top: 1.5rem; text-align: center; font-size: 0.85rem; color: #666; line-height: 1.6;">
+                            🔒 <strong>Vos données restent confidentielles.</strong> Aucun démarchage - Nous vous contactons une seule fois sous 24h pour comprendre votre projet.
                         </p>
                     </form>
 
