--- a/landing-neuf-excellence.html
+++ b/landing-neuf-excellence.html
@@ -8,7 +8,7 @@
     <title>Programmes Neufs d'Exception Littoral Méditerranéen >600K€ | FG STRATEGIES</title>
     <meta name="description" content="Sélection privée programmes neufs d'exception >600K€ Littoral Méditerranéen. Expert indépendant, 0€ d'honoraires. Réponse <24h.">
     <meta name="keywords" content="immobilier neuf excellence, sélection privée, biens haut de gamme Occitanie, accompagnement patrimonial, Montpellier, Nîmes, Sète">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Sélection Privée Immobilier Neuf d'Excellence Occitanie">
