--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YVF7XN809C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-YVF7XN809C');
+    </script>
 </head>
 <body>
     
