--- a/landing-neuf-excellence.html
+++ b/landing-neuf-excellence.html
@@ -37,6 +37,15 @@
       gtag('js', new Date());
       gtag('config', 'AW-16583907507');
     </script>
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YVF7XN809C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-YVF7XN809C');
+    </script>
 </head>
 <body>
 
@@ -350,6 +359,73 @@
             </div>
         </div>
     </footer>
+
+    <!-- CTA Sticky Flottant -->
+    <div class="sticky-cta">
+        <a href="https://outlook.office.com/book/FGSTRATEGIESACH@fg-strategies.com/" 
+           class="sticky-cta-btn" 
+           target="_blank"
+           rel="noopener">
+            <i class="fas fa-calendar-check"></i>
+            Prendre RDV (Réponse <24h)
+        </a>
+    </div>
+
+    <style>
+    .sticky-cta {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 9999;
+        animation: pulse 2s infinite;
+    }
+
+    .sticky-cta-btn {
+        display: inline-flex;
+        align-items: center;
+        gap: 10px;
+        background: linear-gradient(135deg, #1a3a52 0%, #2c5f7f 100%);
+        color: white;
+        padding: 16px 24px;
+        border-radius: 50px;
+        font-weight: 600;
+        font-size: 16px;
+        text-decoration: none;
+        box-shadow: 0 4px 15px rgba(26, 58, 82, 0.4);
+        transition: all 0.3s ease;
+    }
+
+    .sticky-cta-btn:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 6px 20px rgba(26, 58, 82, 0.6);
+        background: linear-gradient(135deg, #2c5f7f 0%, #1a3a52 100%);
+    }
+
+    .sticky-cta-btn i {
+        font-size: 18px;
+    }
+
+    @keyframes pulse {
+        0%, 100% { transform: scale(1); }
+        50% { transform: scale(1.05); }
+    }
+
+    /* Mobile */
+    @media (max-width: 768px) {
+        .sticky-cta {
+            bottom: 15px;
+            right: 15px;
+            left: 15px;
+        }
+        
+        .sticky-cta-btn {
+            width: 100%;
+            justify-content: center;
+            font-size: 15px;
+            padding: 14px 20px;
+        }
+    }
+    </style>
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
