--- a/famille-qualite-vie.html
+++ b/famille-qualite-vie.html
@@ -94,12 +94,12 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YVF7XN809C"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7VFY5NK99C"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-YVF7XN809C');
+      gtag('config', 'G-7VFY5NK99C');
     </script>
 </head>
 <body>
