--- a/mentions-legales (1).html
+++ b/mentions-legales (1).html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
 
     <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YVF7XN809C"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7VFY5NK99C"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-YVF7XN809C');
+      gtag('config', 'G-7VFY5NK99C');
     </script>
 
     <style>
