--- a/residence-secondaire-mediterranee.html
+++ b/residence-secondaire-mediterranee.html
@@ -92,6 +92,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7VFY5NK99C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7VFY5NK99C');
+    </script>
 </head>
 <body>
 
